# nsg

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: error.rs  lib.rs  macros.rs  methods.rs  payload.rs  serializable_int_error_kind.rs  serializable_parse_error_kind.rs
src/basic_search/: mod.rs  search_entry.rs
src/brief_request/: guaranteed.rs  mod.rs
src/data/: address.rs  comment.rs  full_comment.rs  internal_status.rs  mdu.rs  mod.rs  order_type.rs  status.rs  time_constrains.rs
src/tests/: mod.rs
src/tests/basic_search/: invalid.rs  mod.rs  valid_1.rs  valid_2.rs
src/tests/brief_request/: invalid.rs  mod.rs  valid_1.rs  valid_2.rs
src/tests/data/: address.rs  comment.rs  full_comment.rs  internal_status.rs  mdu.rs  mod.rs  order_type.rs  status.rs  time_constrains.rs
src/tests/invalid/: basic_search.rs  mod.rs  work_schedule.rs
src/tests/resources/valid/: basic_search_1.html  basic_search_2.html  brief_request_1.html  brief_request_2.html  view_request_1.html  view_request_2.html  work_schedule_1.html
src/tests/valid/: basic_search_1.rs  basic_search_2.rs  brief_request_1.rs  brief_request_2.rs  mod.rs  view_request_1.rs  view_request_2.rs  work_schedule_1.rs  work_schedule_2.rs
src/tests/view_request/: guarantee.rs  invalid.rs  mod.rs  valid_1.rs  valid_2.rs  valid_3.rs  valid_4.rs
src/tests/work_schedule/: guarantee.rs  invalid.rs  mod.rs  selector.rs  valid_1.rs  valid_2.rs
src/traits/: is_it.rs  mod.rs  prev_element_ref.rs
src/view_request/: comments.rs  guaranteed.rs  mod.rs
src/work_schedule/: mod.rs  order.rs
(+29 files in other folders)
