[package]
name = "nsg"
version = "0.14.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
html-escape = "0.2.13"
itertools = "0.12.1"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"

[dev-dependencies]
paste = "1.0.15"
